testsuite/tests/properties/invalid_prop_def/not_type/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun prop(a: Entity): Int = 0
}
